--- a/french/pages/exercise_negation.html
+++ b/french/pages/exercise_negation.html
@@ -112,6 +112,185 @@
                         </ol>
                     </section>
                 </li>
+
+                <li>
+                    <section class="span-half">
+                        <h4>Répondez aux questions par la négation</h4>
+
+                        <ol>
+                            <li>
+                                <span title="je ne porte pas de robes."> Portes-tu des robes ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="je ne porte pas de robes[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'allons pas sortir.">Est-ce que vous allez sortir ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous n'allons pas sortir[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je n'ai pas fumé de cigare.">As-tu fumé un cigare ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="je n'ai pas fumé de cigare[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne vais pas répéter l'explication.">Vas-tu répéter l’explication
+                                    ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je ne vais pas répéter l'explication[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="il ne se lève pas tôt.">Est-ce qu’il se lève tôt ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="il ne se lève pas tôt[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je n'ai pas acheté de cadeau à Sophie.">As-tu acheté un cadeau à Sophie
+                                    ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je n'ai pas acheté de cadeau à Sophie[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne vais pas me baigner dans la mer.">Vas-tu te baigner dans la mer
+                                    ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je ne vais pas me baigner dans la mer[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne parle pas italien.">Est-ce que tu parles italien ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="je ne parle pas italien[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="elle ne s’est pas lavé les cheveux.">S’est-elle lavé les cheveux ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="elle ne s’est pas lavé les cheveux[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'amenons pas les enfants.">Amenez-vous les enfants ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous n'amenons pas les enfants[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne vais pas sortir les poubelles.">Vas-tu sortir les poubelles ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je ne vais pas sortir les poubelles[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'avons pas acheté le dernier roman.">Avez-vous acheté le dernier
+                                    roman ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="nous n'avons pas acheté le dernier roman[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je n'apporte pas de bouteille de vin.">Apportes-tu une bouteille de vin
+                                    ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je n'apporte pas de bouteille de vin[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je n'ai pas pensé aux conséquences.">As-tu pensé aux conséquences ?</span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je n'ai pas pensé aux conséquences[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'allons pas nous promener.">Allez-vous vous promener ?</span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous n'allons pas nous promener[.]?"></span>
+                            </li>
+                        </ol>
+                    </section>
+                </li>
+
+                <li>
+                    <section>
+                        <h4>Répondez à la forme négative avec <i>ne ... ni ... ni ...</i> .</h4>
+
+                        <ol class="input-sentence-width">
+                            <li>
+                                <span title="le musée n'est ouvert ni le dimanche ni le lundi.">Le musée est ouvert le
+                                    dimanche et le lundi?</span>
+                                <div>Non,&nbsp;<input type="text"
+                                        pattern="le musée n'est ouvert ni le dimanche ni le lundi[.]?"></div>
+                            </li>
+
+                            <li>
+                                <span title="ce professeur ne connaît ni ma sœur ni mon frère.">Ce professeur connaît ta
+                                    sœur et ton frère ?</span>
+                                <div>Non,&nbsp;<input type="text"
+                                        pattern="ce professeur ne connaît ni ma sœur ni mon frère[.]?"></div>
+                            </li>
+
+                            <li>
+                                <span title="tu ne peux payer ni par chèque ni par carte de crédit.">Je peux payer par
+                                    chèque et par carte de crédit ?</span>
+                                <div>Non,&nbsp;<input type="text"
+                                        pattern="tu ne peux payer ni par chèque ni par carte de crédit[.]?"></div>
+                            </li>
+
+                            <li>
+                                <span title="tu ne peux prendre ni de bière ni de verre de vin.">Je peux prendre une
+                                    bière ou un verre de vin ?</span>
+                                <div>Non,&nbsp;<input type="text"
+                                        pattern="tu ne peux prendre ni de bière ni de verre de vin[.]?"></div>
+                            </li>
+
+                            <li>
+                                <span title="on ne pourrait se voir ni lundi ni mardi.">On pourrait se voir lundi ou
+                                    mardi ?</span>
+                                <div>Non,&nbsp;<input type="text"
+                                        pattern="on ne pourrait se voir ni lundi ni mardi[.]?"></div>
+                            </li>
+
+                        </ol>
+                    </section>
+                </li>
+
+                <li>
+                    <section class="span-half">
+                        <h4>Répondez à la forme négative avec <i>ne ...que</i>.</h4>
+
+                        <ol>
+                            <li>
+                                <span title="nous ne prenons qu'une salade.">Vous prenez seulement une salade pour dîner
+                                    ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="nous ne prenons qu'une salade[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'avons que dix dollars.">Vous avez seulement dix dollars ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="nous n'avons que dix dollars[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'avons que deux ou trois minutes.">Avez-vous deux ou trois minutes
+                                    ?</span>
+                                <span>Oui,&nbsp;<input type="text"
+                                        pattern="nous n'avons que deux ou trois minutes[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'arriverons qu'à treize heures.">Vous arriverez seulement à treize
+                                    heures ?</span>
+                                <span>Oui,&nbsp;<input type="text"
+                                        pattern="nous n'arriverons qu'à treize heures[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous ne voulons qu'un café.">Vous voulez seulement un café ?</span>
+                                <span>Oui,&nbsp;<input type="text" pattern="nous ne voulons qu'un café[.]?"></span>
+                            </li>
+                        </ol>
+                    </section>
+                </li>
+
             </ol>
 
             <iframe src="partials/errorCounter.html"
