fine-tuned text exercise for future perfect

--- a/french/pages/exercise_futureperfect.html
+++ b/french/pages/exercise_futureperfect.html
@@ -38,7 +38,7 @@
 
                     <li>
                         Dans deux heures, nous (<b title="aurons cueilli">cueillir</b>)
-                        <input type="text" pattern="aurons cueilli">
+                        <input type="text" class="wide" pattern="aurons cueilli">
                         au moins dix kilos de fraises.
                     </li>
 
@@ -80,7 +80,7 @@
                     <li>
                         Elle révisera les documents que nous
                         (<b title="aurons préparés">préparer</b>)
-                        <input type="text" pattern="aurons préparés"> .
+                        <input type="text" class="wide" pattern="aurons préparés"> .
                     </li>
 
                     <li>
@@ -217,7 +217,7 @@
 
                     <li>
                         Nous ferons une fête quand mes parents (<b title="seront partis">partir</b>)
-                        <input type="text" class="wide" pattern="seront partis">
+                        <input type="text" pattern="seront partis">
                         en voyage.
                     </li>
 
@@ -254,7 +254,7 @@
                     <li>
                         Nous partirons seulement quand
                         (<b title="j'aurai résolu">je résoudre</b>)
-                        <input type="text" class="wide" pattern="j'aurai résolu">
+                        <input type="text" pattern="j'aurai résolu">
                         ce problème.
                     </li>
 
@@ -281,7 +281,7 @@
                     <li>
                         Je n’ai pas pu aider ma sœur. Elle
                         (<b title="aura certainement tout prévu">prévoir certainement tout</b>)
-                        <input type="text" class="extra-wide" pattern="aura certainement tout prévu">
+                        <input type="text" style="width:14em" pattern="aura certainement tout prévu">
                     </li>
 
                     <li>
