fine-tuned exercise for time prepositions

--- a/french/pages/exercise_time_prepositions.html
+++ b/french/pages/exercise_time_prepositions.html
@@ -122,13 +122,13 @@
                             </li>
 
                             <li>
-                                Elle a adopté un chaton
+                                Elle a un chaton
                                 <input type="text" pattern="depuis">
                                 <b title="depuis">quelques jours</b>.
                             </li>
 
                             <li>
-                                À partir de janvier, nous suivrons ces cours
+                                À partir de septembre, nous suivrons ces cours
                                 <input type="text" pattern="pour">
                                 <b title="pour">cinq semaines</b>.
                             </li>
