--- a/french/index.html
+++ b/french/index.html
@@ -181,6 +181,12 @@
     <a href="pages/exercise_negation.html">exercice de texte</a>
   </div>
 
+  <div class="card">
+    <span class="cefr">A2</span>
+    <header>La négation 2</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_negation2.html">exercice de texte</a>
+  </div>
 
   <hr />
 
