--- a/french/pages/exercise_negation.html
+++ b/french/pages/exercise_negation.html
@@ -7,7 +7,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Le conditionnel présent</title>
+    <title>La négation</title>
 
     <link rel="icon" type="image/x-icon" href="../images/eiffel-tower.ico">
     <link rel="stylesheet" href="../styles.css">
@@ -29,7 +29,7 @@
                 <li>
 
                     <section class="span-half">
-                        <h4> Écrivez à la forme négative et faites les changements nécessaires.</h4>
+                        <h4>Écrivez à la forme négative et faites les changements nécessaires.</h4>
 
                         <ol>
                             <li>
