fine-tuned present subjunctive

--- a/french/pages/exercise_presentsubjunctive.html
+++ b/french/pages/exercise_presentsubjunctive.html
@@ -898,7 +898,11 @@ pas une émotion incertaine. Donc on utilise l’indicatif, qui est le mode du r
                                     </label>
                                 </span>
                                 <span class="info-icon" title="On met le subjonctif après “il suffit que” parce qu’on exprime une condition possible, 
-non encore réalisée, et non un fait réel.">&#128712;</span>
+non encore réalisée, et non un fait réel.
+Il suffit que appartient aux tournures impersonnelles qui exigent le subjonctif :
+- il faut que
+- il est nécessaire que
+- il est important que">&#128712;</span>
                             </li>
 
                             <li>
