--- a/french/pages/exercise_futureperfect.html
+++ b/french/pages/exercise_futureperfect.html
@@ -68,7 +68,7 @@
 
                     <li>
                         Pourras-tu me prêter les DVD que tu (<b title="auras vus">voir</b>)
-                        <input type="text" pattern="auras vus"> .
+                        <input type="text" pattern="auras vus"> ?
                     </li>
 
                     <li>
@@ -116,7 +116,7 @@
                     <li>
                         Je vous communiquerai ses coordonnées(f) quand elle me les
                         (<b title="aura données">donner</b>)
-                        <input type="text" pattern="aura données"> .
+                        <input type="text" class="wide" pattern="aura données"> .
                     </li>
 
                     <li>
