--- a/french/pages/exercise_negation2.html
+++ b/french/pages/exercise_negation2.html
@@ -385,6 +385,196 @@
                     </section>
                 </li>
 
+                <li>
+                    <section class="span-half">
+                        <h4>Répondez à la forme négative.</h4>
+
+                        <ol>
+                            <li>
+                                <span title="je ne porte plus mes vieux souliers.">
+                                    Portes-tu encore tes vieux souliers?
+                                </span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je ne porte plus mes vieux souliers[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne lis jamais de romans.">
+                                    Lis-tu des romans de temps en temps ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="je ne lis jamais de romans[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne vais rien amener.">
+                                    Vas-tu amener quelque chose ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="je ne vais rien amener[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'avons acheté aucun cadeau.">
+                                    Avez-vous acheté tous vos cadeaux ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="nous n'avons acheté aucun cadeau[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne suis plus amoureux de Lucie.">
+                                    Es-tu toujours amoureux de Lucie ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je ne suis plus amoureux de Lucie[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous ne sommes jamais en classe.">
+                                    Êtes-vous souvent en classe ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous ne sommes jamais en classe[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="personne n'est médecin.">
+                                    Quelqu’un est médecin ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="personne n'est médecin[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous ne voulons plus de café.">
+                                    Voulez-vous encore du café ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous ne voulons plus de café[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="il n'a pas encore participé à cette émission.">
+                                    Il a déjà participé à cette émission ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="il n'a pas encore participé à cette émission[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je n'ai vu aucun bon spectacle.">
+                                    As-tu vu quelques bons spectacles ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="je n'ai vu aucun bon spectacle[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="Rémi ne travaille plus.">
+                                    Est-ce que Rémi travaille toujours ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="Rémi ne travaille plus[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'avons pas encore commencé.">
+                                    Avez-vous déjà commencé le jardinage ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="nous n'avons pas encore commencé[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="il ne joue plus.">
+                                    Joue-t-il toujours au poker ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="il ne joue plus[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="il ne pleut plus.">
+                                    Il pleut encore ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="il ne pleut plusn[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous ne faisons plus de musique.">
+                                    Vous faites toujours de la musique ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous ne faisons plus de musique[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="il n'est pas encore midi.">
+                                    Est-il déjà midi ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="il n'est pas encore midi[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="rien ne m'intéresse.">
+                                    Quelque chose t’intéresse ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="rien ne m'intéresse[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="il n'y avait aucune faute dans ce texte.">
+                                    Il y avait plusieurs fautes dans ce texte ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="il n'y avait aucune faute dans ce texte[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je n'ai pas encore  mis de la cannelle dans la tarte.">
+                                    As-tu déjà mis la cannelle dans la tarte ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="je n'ai pas encore  mis de la cannelle dans la tarte[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous n'allons nulle part.">
+                                    Allons-nous quelque part demain ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous n'allons nulle part[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="le spectacle n'a pas encore commencé.">
+                                    Le spectacle a déjà commencé ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text"
+                                        pattern="le spectacle n'a pas encore commencé[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="il n'y a personne.">
+                                    Il y a quelqu’un ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="il n'y a personne[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="nous ne buvons jamais de porto.">
+                                    Buvez-vous souvent du porto ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="nous ne buvons jamais de porto[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne fais plus d'alpinisme.">
+                                    Fais-tu toujours de l’alpinisme ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="je ne fais plus d'alpinisme[.]?"></span>
+                            </li>
+
+                            <li>
+                                <span title="je ne vois jamais Luc.">
+                                    Vois-tu Luc de temps en temps ?
+                                </span>
+                                <span>Non,&nbsp;<input type="text" pattern="je ne vois jamais Luc[.]?"></span>
+                            </li>
+                        </ol>
+                    </section>
+                </li>
             </ol>
 
             <iframe src="partials/errorCounter.html"
