fixed XHTML validation for imperative

--- a/french/pages/exercise_imperative.html
+++ b/french/pages/exercise_imperative.html
@@ -23,6 +23,7 @@
     <main spellcheck="false">
         <article class="text">
             <h2>L’impératif</h2>
+            <h3>Exercices de conjugaison</h3>
 
             <ol class="nested">
                 <li>
