fine-tuning text exercise for future perfect

--- a/french/pages/exercise_futureperfect.html
+++ b/french/pages/exercise_futureperfect.html
@@ -97,8 +97,8 @@
 
                     <li>
                         Vous pourrez voter aussitôt que vous
-                        (<b title="vous serez inscrit">s’inscrire</b>)
-                        <input type="text" class="wide" pattern="vous serez inscrit"> .
+                        (<b title="vous serez inscrits">s’inscrire</b>)
+                        <input type="text" class="wide" pattern="vous serez inscrits"> .
                     </li>
 
                     <li>
@@ -185,9 +185,9 @@
                     </li>
 
                     <li>
-                        Je ne veux plus te parler tant que tu ne
-                        (<b title="te seras pas excusé">pas s’excuser</b>)
-                        <input type="text" class="wide" pattern="te seras pas excusé"> .
+                        Je ne veux plus te parler tant que tu
+                        (<b title="ne te seras pas excusé">ne pas s’excuser</b>)
+                        <input type="text" class="extra-wide" pattern="ne te seras pas excusé"> .
                     </li>
 
                     <li>
@@ -254,7 +254,7 @@
                     <li>
                         Nous partirons seulement quand
                         (<b title="j'aurai résolu">je résoudre</b>)
-                        <input type="text" pattern="j'aurai résolu">
+                        <input type="text" class="wide" pattern="j'aurai résolu">
                         ce problème.
                     </li>
 
