--- a/french/index.html
+++ b/french/index.html
@@ -78,6 +78,13 @@
 
   <div class="card">
     <span class="cefr">B1</span>
+    <header>Avoir ou Être ?</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_avoir_etre.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">B1</span>
     <header>Le plus-que-parfait</header>
     <a class="theory">théorie</a>
     <a href="pages/conjugations.html?Le%20plus-que-parfait">exercice de liste de verbes</a>
