--- a/french/pages/exercise_time_prepositions.html
+++ b/french/pages/exercise_time_prepositions.html
@@ -23,7 +23,7 @@
     <main spellcheck="false">
         <article class="text">
             <h2>Les prépositions de temps</h2>
-            <h3>Exercices de conjugaison</h3>
+            <h3>Exercices et corrigé</h3>
 
             <ol class="nested">
                 <li>
