finished text exercise for avoir/etre

--- a/french/pages/exercise_avoir_etre.html
+++ b/french/pages/exercise_avoir_etre.html
@@ -165,6 +165,174 @@
                     </section>
                 </li>
 
+
+                <li>
+                    <section>
+                        <h4>Ajoutez l’auxiliaire <i>avoir</i> ou <i>être</i> aux phrases suivantes :</h4>
+
+                        <ol>
+                            <li>
+                                Hier, Sébastien (m) (<b title="a paru">paraître</b>)
+                                <input type="text" pattern="a paru">
+                                fatigué.
+                            </li>
+
+                            <li>
+                                Les enfants (<b title="sont rentrés">rentrer</b>)
+                                <input type="text" pattern="sont rentrés">
+                                à la maison vers vingt heures.
+                            </li>
+
+                            <li>
+                                En quelle année (<b title="es-tu allé">aller</b>)
+                                <input type="text" pattern="es">
+                                -tu
+                                <input type="text" pattern="allé">
+                                en Australie ?
+                            </li>
+
+                            <li>
+                                Nous (<b title="sommes montés">monter</b>)
+                                <input type="text" pattern="sommes montés">
+                                dans le train juste avant le départ.
+                            </li>
+
+                            <li>
+                                Pour venir ici, (<b title="es-tu passé">passer</b>)
+                                <input type="text" pattern="es">
+                                -tu
+                                <input type="text" pattern="passé">
+                                par le boulevard ?
+                            </li>
+
+                            <li>
+                                Nous (<b title="sommes sortis">sortir</b>)
+                                <input type="text" pattern="sommes sortis">
+                                tôt pour prendre l’autobus.
+                            </li>
+
+                            <li>
+                                Vous (<b title="êtes-vous déjà rencontrés">se rencontrer</b>)
+                                <input type="text" pattern="êtes">
+                                -vous déjà
+                                <input type="text" pattern="rencontrés"> ?
+                            </li>
+
+                            <li>
+                                Jasmine (f) (<b title="est sortie">sortir</b>)
+                                <input type="text" pattern="est sortie">
+                                avec son nouvel ami.
+                            </li>
+
+                            <li>
+                                Il (<b title="est monté">monter</b>)
+                                <input type="text" pattern="est monté">
+                                à l’étage de la bibliothèque demander une information.
+                            </li>
+
+                            <li>
+                                Hier, je (<b title="suis resté">rester</b>)
+                                <input type="text" pattern="suis resté">
+                                devant la télévision toute la soirée.
+                            </li>
+                        </ol>
+                    </section>
+                </li>
+
+                <li>
+                    <section>
+                        <h4>Ajoutez l’auxiliaire <i>avoir</i> ou <i>être</i> aux verbes monter, descendre, sortir,
+                            rentrer, passer et retourner :</h4>
+
+                        <ol>
+                            <li>
+                                Il (<b title="a monté">monter</b>)
+                                <input type="text" pattern="a monté">
+                                l’escalier en courant.
+                            </li>
+
+                            <li>
+                                Cendrillon (f) (<b title="est rentrée">rentrer</b>)
+                                <input type="text" pattern="est rentrée">
+                                chez elle juste avant le coup de minuit.
+                            </li>
+
+                            <li>
+                                Ce matin, je (<b title="suis passé">passer</b>)
+                                <input type="text" pattern="suis passé">
+                                chez toi, mais il n’y avait personne.
+                            </li>
+
+                            <li>
+                                Nous (<b title="sommes montés">monter</b>)
+                                <input type="text" pattern="sommes montés">
+                                dans la chambre de notre fils pour lui parler.
+                            </li>
+
+                            <li>
+                                Vous (<b title="êtes descendus">descendre</b>)
+                                <input type="text" pattern="êtes descendus">
+                                à l’hôtel pour la fin de semaine.
+                            </li>
+
+                            <li>
+                                Elles (<b title="ont rentré">rentrer</b>)
+                                <input type="text" pattern="ont rentré">
+                                les sacs d’épicerie.
+                            </li>
+
+                            <li>
+                                (<b title="Avez-vous passé">Passer</b>)
+                                <input type="text" pattern="[Aa]vez">
+                                -vous
+                                <input type="text" pattern="passé">
+                                une belle soirée à parler avec eux..
+                            </li>
+
+                            <li>
+                                Tu (<b title="as descendu">descendre</b>)
+                                <input type="text" pattern="as descendu">
+                                cette colline très rapidement.
+                            </li>
+
+                            <li>
+                                Mélisa (f) (<b title="est retournée">retourner</b>)
+                                <input type="text" pattern="est retournée">
+                                chez elle à pied.
+
+                            <li>
+                                Ce matin, nous (<b title="avons sorti">sortir</b>)
+                                <input type="text" pattern="avons sorti">
+                                les poubelles.
+                            </li>
+
+                            <li>
+                                Pour trouver mes clés, (<b title="j'ai retourné">je retourner</b>)
+                                <input type="text" pattern="j'ai retourné">
+                                mes poches de manteau à l’envers.
+                            </li>
+
+                            <li>
+                                Ils (<b title="ont descendu">descendre</b>)
+                                <input type="text" pattern="ont descendu">
+                                les vieux meubles au sous-sol.
+                            </li>
+
+                            <li>
+                                Philippe (m) (<b title="a passé">passer</b>)
+                                <input type="text" pattern="a passé">
+                                son permis de conduire sans nervosité.
+                            </li>
+
+                            <li>
+                                Les voyageurs (m) (<b title="sont montés">monter</b>)
+                                <input type="text" pattern="sont montés">
+                                dans l’avion après deux heures d’attente.
+                            </li>
+                        </ol>
+                    </section>
+                </li>
+
             </ol>
 
             <iframe src="partials/errorCounter.html"
