fixed ErrorCounter for radio buttons (two and three choices)

--- a/french/pages/exercise_futureperfect.html
+++ b/french/pages/exercise_futureperfect.html
@@ -155,7 +155,7 @@
 
                     <li>
                         Vous rirez dès qu’il vous (<b title="aura raconté">raconter</b>)
-                        <input type="text" pattern="aura raconté">
+                        <input type="text" class="wide" pattern="aura raconté">
                         sa dernière mésaventure.
                     </li>
 
