added text exercise for avoir-etre to stats page

--- a/french/index.html
+++ b/french/index.html
@@ -54,6 +54,13 @@
 
   <div class="card">
     <span class="cefr">A2</span>
+    <header>Avoir ou Être ?</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_avoir_etre.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A2</span>
     <header>L'imparfait</header>
     <a class="theory">théorie</a>
     <a href="pages/conjugations.html?L'imparfait">exercice de liste de verbes</a>
@@ -74,13 +81,6 @@
     <a class="theory">théorie</a>
     <a href="pages/conjugations.html?L%27impératif">exercice de liste de verbes</a>
     <a href="pages/exercise_imperative.html">exercice de texte</a>
-  </div>
-
-  <div class="card">
-    <span class="cefr">B1</span>
-    <header>Avoir ou Être ?</header>
-    <a class="theory">théorie</a>
-    <a href="pages/exercise_avoir_etre.html">exercice de texte</a>
   </div>
 
   <div class="card">
