--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -61,7 +61,7 @@
                         <th rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th class="conjugations" colspan="4">A1</th>
-                        <th class="conjugations others" colspan="9">A2</th>
+                        <th class="conjugations others" colspan="10">A2</th>
                         <th class="conjugations" colspan="6">B1</th>
                         <th class="conjugations" colspan="5">B2</th>
                         <th class="tense-sequence" colspan="4"></th>
@@ -72,6 +72,7 @@
                         <th class="conjugations" colspan="2">passé composé</th>
 
                         <!-- A2 -->
+                        <th class="conjugations" colspan="1">avoir-être</th>
                         <th class="conjugations" colspan="2">imparfait</th>
                         <th class="conjugations" colspan="2">futur simple</th>
                         <th class="others" colspan="1" title="prépositions de temps">prép. de temps</th>
@@ -103,6 +104,7 @@
                         <th class="conjugations"><a href="exercise_presentperfect.html">texte</a></th>
 
                         <!-- A2 -->
+                        <th class="conjugations"><a href="exercise_avoir_etre.html">texte</a></th>
                         <!-- imparfait -->
                         <th class="conjugations"><a href="conjugations.html?L%27imparfait">liste</a></th>
                         <th class="conjugations"><a href="exercise_imperfect.html">texte</a></th>
@@ -174,6 +176,8 @@
                             <td class="conjugations" data-key="exercise_presentperfect.html"></td>
 
                             <!-- A2 -->
+                            <td class="conjugations" data-key="exercise_avoir_etre.html"></td>
+
                             <td class="conjugations" data-key="conjugations.html?L%27imparfait"></td>
                             <td class="conjugations" data-key="exercise_imperfect.html"></td>
 
